added MissingAcceptHeaderException, upgraded streams at service, added images to readme